<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.androditry.NewQuestion" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#051034"
        android:textSize="18sp"
        android:text="@string/quesTitle" />
    
    <EditText
        android:id="@+id/etQuesTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/quesTitleHint" />
    
    <TextView
        android:layout_width="wrap_content"
        android:textColor="#051034"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/quesDetails" />

    <EditText
        android:id="@+id/etQuesDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18sp"
        android:minHeight="80dp"
        android:hint="@string/quesDetailsHint"
        android:inputType="textMultiLine" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <Button
        android:id="@+id/btnPostQuestion"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        style="@style/ButtonText"
        android:text="@string/postQuestion" />
    </LinearLayout>
    
</LinearLayout>

</ScrollView>